force-app/main/default/objects/ht_LOA_Insurance_Product_Mapping__c/fields/ht_LineOfAuthorityCode__c.field-meta.xml
<CustomField>
    <fullName>ht_LineOfAuthorityCode__c</fullName>
    <label>Line Of Authority Code</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>