force-app/main/default/objects/ht_LOA_Insurance_Product_Mapping__c/fields/ht_StateOrProvinceCode__c.field-meta.xml
<CustomField>
    <fullName>d4c_StateOrProvinceCode__c</fullName>
    <label>State Or Province Code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>