force-app/main/default/objects/ht_LOA_Insurance_Product_Mapping__c/listViews/ht_All.listView-meta.xml
<ListView>
    <fullName>ht_All</fullName>
    <columns>NAME</columns>
    <columns>ht_StateOrProvinceCode__c</columns>
    <columns>ht_LineOfAuthorityCode__c</columns>
    <columns>ht_LineOfAuthorityDescription__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>